SET(CMAKE_BUILD_TYPE Release)

INCLUDE_DIRECTORIES (
	${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}
	${QT_QTCORE_INCLUDE_DIR} ${QT_QTGUI_INCLUDE_DIR}
	${XVCalc_SOURCE_DIR}/libxvcalc .)

SET (XvcGui_HEADERS     ${XVCalc_SOURCE_DIR}/libxvcalc/XVCalc.h)
SET (XvcGui_MOC_HEADERS XvcWindow.h)
SET (XvcGui_SOURCES     XvcGui.cpp XvcWindow.cpp)
SET (XvcGui_UIS         XvcWindow.ui)

QT4_WRAP_UI(XvcGui_UI_SOURCES ${XvcGui_UIS})
QT4_WRAP_CPP(XvcGui_MOC_SOURCES ${XvcGui_MOC_HEADERS})

IF(WIN32)
	SET(QT_USE_QTMAIN TRUE)
ENDIF(WIN32)

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_EXECUTABLE(XvcGui WIN32 MACOSX_BUNDLE
	${XvcGui_SOURCES}
	${XvcGui_UI_SOURCES}
	${XvcGui_MOC_SOURCES})
TARGET_LINK_LIBRARIES(XvcGui
	xvcalc
	${QT_LIBRARIES})
INSTALL(TARGETS XvcGui DESTINATION bin)
